docs(readme): document the Java 25 + WIRED modernization done on this branch
Adds a "What's new in this branch" section: Java 25 runtime/build (JDK 25, ZGC),
language modernization (instanceof patterns, switch expressions, Stream.toList,
sequenced collections, records), concurrency fixes, the 100+ new wired interactions,
and database migration 013. All in English, links to the design specs.